# CPP-2020-2021-HW11

./: CMakeLists.txt  CPP-2019-2020-TemplateCPP.pro  README.md  Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  main.cpp  main.h  mythread.cpp  mythread.h  task1.cpp  task1.h  task2.cpp  task2.h  task2thread.cpp  task2thread.h
